using Microsoft.EntityFrameworkCore;
using SchedulerPlatform.Core.Domain.Entities;
using SchedulerPlatform.Core.Domain.Interfaces;
using SchedulerPlatform.Infrastructure.Data;

namespace SchedulerPlatform.Infrastructure.Repositories;

public class ScheduleRepository : Repository<Schedule>, IScheduleRepository
{
    public ScheduleRepository(SchedulerDbContext context) : base(context)
    {
    }

    public override async Task<IEnumerable<Schedule>> GetAllAsync()
    {
        return await _dbSet
            .Where(s => !s.IsDeleted)
            .ToListAsync();
    }

    public async Task<IEnumerable<Schedule>> GetByClientIdAsync(int clientId)
    {
        return await _dbSet
            .Include(s => s.Client)
            .Include(s => s.JobParameters)
            .Where(s => s.ClientId == clientId && !s.IsDeleted)
            .ToListAsync();
    }

    public async Task<IEnumerable<Schedule>> GetEnabledSchedulesAsync()
    {
        return await _dbSet
            .Include(s => s.Client)
            .Include(s => s.JobParameters)
            .Where(s => s.IsEnabled && !s.IsDeleted)
            .ToListAsync();
    }

    public async Task<IEnumerable<Schedule>> GetSchedulesDueForExecutionAsync(DateTime currentTime)
    {
        return await _dbSet
            .Include(s => s.Client)
            .Include(s => s.JobParameters)
            .Where(s => s.IsEnabled 
                && !s.IsDeleted 
                && (s.NextRunDateTime == null || s.NextRunDateTime <= currentTime))
            .ToListAsync();
    }

    public async Task UpdateNextRunDateTimeAsync(int scheduleId, DateTime nextRunDateTime)
    {
        var schedule = await _dbSet.FindAsync(scheduleId);
        if (schedule != null)
        {
            schedule.NextRunDateTime = nextRunDateTime;
            schedule.LastRunDateTime = DateTime.UtcNow;
            schedule.ModifiedDateTime = DateTime.UtcNow;
        }
    }

    public async Task<Schedule?> GetByIdWithNotificationSettingsAsync(int id)
    {
        return await _dbSet
            .Include(s => s.NotificationSetting)
            .Include(s => s.Client)
            .FirstOrDefaultAsync(s => s.Id == id && !s.IsDeleted);
    }

    public async Task<(IEnumerable<Schedule> items, int totalCount)> GetPagedAsync(
        int pageNumber,
        int pageSize,
        int? clientId = null,
        string? searchTerm = null,
        bool? isEnabled = null)
    {
        var query = _dbSet
            .AsNoTracking()
            .Where(s => !s.IsDeleted);
        
        if (clientId.HasValue)
        {
            query = query.Where(s => s.ClientId == clientId.Value);
        }
        
        if (!string.IsNullOrWhiteSpace(searchTerm))
        {
            query = query.Where(s => s.Name.Contains(searchTerm));
        }
        
        if (isEnabled.HasValue)
        {
            query = query.Where(s => s.IsEnabled == isEnabled.Value);
        }
        
        var totalCount = await query.CountAsync();
        
        var items = await query
            .OrderBy(s => s.Name)
            .ThenBy(s => s.Id)
            .Skip((pageNumber - 1) * pageSize)
            .Take(pageSize)
            .Select(s => new
            {
                Schedule = s,
                ClientName = s.Client != null ? s.Client.ClientName : null,
                LastExecution = s.JobExecutions
                    .OrderByDescending(e => e.StartDateTime)
                    .Select(e => new { e.Status, e.StartDateTime, e.EndDateTime })
                    .FirstOrDefault()
            })
            .ToListAsync();
        
        var schedules = items.Select(i =>
        {
            if (i.Schedule.Client == null && i.ClientName != null)
            {
                i.Schedule.Client = new Client { ClientName = i.ClientName };
            }
            i.Schedule.LastRunStatus = i.LastExecution?.Status;
            // Use EndDateTime if available (job completed), otherwise use StartDateTime
            i.Schedule.LastRunDateTime = i.LastExecution?.EndDateTime ?? i.LastExecution?.StartDateTime;
            return i.Schedule;
        }).ToList();
        
        return (schedules, totalCount);
    }

    public async Task<IEnumerable<Schedule>> GetAllWithNotificationSettingsAsync()
    {
        return await _dbSet
            .Include(s => s.NotificationSetting)
            .Where(s => !s.IsDeleted)
            .ToListAsync();
    }

    public async Task<IEnumerable<Schedule>> GetByClientIdWithNotificationSettingsAsync(int clientId)
    {
        return await _dbSet
            .Where(s => s.ClientId == clientId && !s.IsDeleted)
            .Include(s => s.NotificationSetting)
            .ToListAsync();
    }

    public async Task<int> GetTotalSchedulesCountAsync(int? clientId)
    {
        var query = _dbSet.AsNoTracking()
            .Where(s => !s.IsDeleted);

        if (clientId.HasValue)
        {
            query = query.Where(s => s.ClientId == clientId.Value);
        }

        return await query.CountAsync();
    }

    public async Task<int> GetEnabledSchedulesCountAsync(int? clientId)
    {
        var query = _dbSet.AsNoTracking()
            .Where(s => !s.IsDeleted && s.IsEnabled);

        if (clientId.HasValue)
        {
            query = query.Where(s => s.ClientId == clientId.Value);
        }

        return await query.CountAsync();
    }

    public async Task<int> GetDisabledSchedulesCountAsync(int? clientId)
    {
        var query = _dbSet.AsNoTracking()
            .Where(s => !s.IsDeleted && !s.IsEnabled);

        if (clientId.HasValue)
        {
            query = query.Where(s => s.ClientId == clientId.Value);
        }

        return await query.CountAsync();
    }

    public async Task<IEnumerable<Schedule>> GetSchedulesForCalendarAsync(DateTime startUtc, DateTime endUtc, int? clientId, int maxPerDay = 10)
    {
        var query = _dbSet.AsNoTracking()
            .Where(s => !s.IsDeleted 
                && s.NextRunDateTime.HasValue 
                && s.NextRunDateTime.Value >= startUtc 
                && s.NextRunDateTime.Value <= endUtc);

        if (clientId.HasValue)
        {
            query = query.Where(s => s.ClientId == clientId.Value);
        }

        var schedules = await query
            .OrderBy(s => s.NextRunDateTime)
            .ThenBy(s => s.Id)
            .Select(s => new
            {
                Schedule = s,
                DayDate = s.NextRunDateTime.Value.Date
            })
            .ToListAsync();

        var groupedByDay = schedules
            .GroupBy(x => x.DayDate)
            .SelectMany(g => g.Take(maxPerDay).Select(x => x.Schedule))
            .ToList();

        return groupedByDay;
    }
}
